html extra whitespace around solved

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   justify-content: space-between;
 }
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
+
 * {
   font-family: "Poppins", sans-serif;
 }
@@ -377,5 +383,10 @@ a {
 
   * {
     border: none;
+  }
+  html,
+  body {
+    padding: 0;
+    margin: 0;
   }
 }
